@@ -1,4 +1,13 @@
 Setup 7.x-1.x-dev, xxxx-xx-xx (development release)
 --------------------------------------------------------------------------------
 
+- #1784044: Fixed permission error.
+- Added hook_uninstall() implementation.
+- Added Admin module supression implementation.
+
+
+
+Setup 7.x-1.0-beta1, 2012-08-17
+--------------------------------------------------------------------------------
+
 - Initial commit
